# EfficientMicroNet

./: README.md  evaluate.py  inference.py  knowledge_distillation.py  predict_cifar10.py  predict_cifar10_enhanced.py  pyproject.toml  requirements.txt  train.py  visualize.py
eval_results/: evaluation_results.json
models/: __init__.py  efficient_micro_net.py
outputs/: config.json  history.json
utils/: __init__.py  data_augmentation.py  losses.py  optimizer.py
